--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -158,7 +158,7 @@
     <ClInclude Include="Mat3.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Pipeline.h" />
-    <ClInclude Include="PubeScreenTransformer.h" />
+    <ClInclude Include="PerspectiveScreenTransformer.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SolidEffect.h" />
